@@ -246,14 +246,22 @@ block|{
 name|String
 name|value
 init|=
-name|sp
-operator|.
-name|getId
+name|parseArg
 argument_list|()
 decl_stmt|;
-name|consumeArgumentDelimiter
-argument_list|()
-expr_stmt|;
+if|if
+condition|(
+name|argWasQuoted
+condition|)
+throw|throw
+operator|new
+name|ParseException
+argument_list|(
+literal|"Expected identifier instead of quoted string:"
+operator|+
+name|value
+argument_list|)
+throw|;
 return|return
 name|value
 return|;
@@ -267,17 +275,36 @@ parameter_list|()
 throws|throws
 name|ParseException
 block|{
+name|String
+name|str
+init|=
+name|parseArg
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|argWasQuoted
+argument_list|()
+condition|)
+throw|throw
+operator|new
+name|ParseException
+argument_list|(
+literal|"Expected float instead of quoted string:"
+operator|+
+name|str
+argument_list|)
+throw|;
 name|float
 name|value
 init|=
-name|sp
+name|Float
 operator|.
-name|getFloat
-argument_list|()
+name|parseFloat
+argument_list|(
+name|str
+argument_list|)
 decl_stmt|;
-name|consumeArgumentDelimiter
-argument_list|()
-expr_stmt|;
 return|return
 name|value
 return|;
@@ -291,17 +318,36 @@ parameter_list|()
 throws|throws
 name|ParseException
 block|{
+name|String
+name|str
+init|=
+name|parseArg
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|argWasQuoted
+argument_list|()
+condition|)
+throw|throw
+operator|new
+name|ParseException
+argument_list|(
+literal|"Expected double instead of quoted string:"
+operator|+
+name|str
+argument_list|)
+throw|;
 name|double
 name|value
 init|=
-name|sp
+name|Double
 operator|.
-name|getDouble
-argument_list|()
+name|parseDouble
+argument_list|(
+name|str
+argument_list|)
 decl_stmt|;
-name|consumeArgumentDelimiter
-argument_list|()
-expr_stmt|;
 return|return
 name|value
 return|;
@@ -315,19 +361,53 @@ parameter_list|()
 throws|throws
 name|ParseException
 block|{
+name|String
+name|str
+init|=
+name|parseArg
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|argWasQuoted
+argument_list|()
+condition|)
+throw|throw
+operator|new
+name|ParseException
+argument_list|(
+literal|"Expected double instead of quoted string:"
+operator|+
+name|str
+argument_list|)
+throw|;
 name|int
 name|value
 init|=
-name|sp
+name|Integer
 operator|.
-name|getInt
-argument_list|()
+name|parseInt
+argument_list|(
+name|str
+argument_list|)
 decl_stmt|;
-name|consumeArgumentDelimiter
-argument_list|()
-expr_stmt|;
 return|return
 name|value
+return|;
+block|}
+DECL|field|argWasQuoted
+specifier|private
+name|boolean
+name|argWasQuoted
+decl_stmt|;
+DECL|method|argWasQuoted
+specifier|public
+name|boolean
+name|argWasQuoted
+parameter_list|()
+block|{
+return|return
+name|argWasQuoted
 return|;
 block|}
 DECL|method|parseArg
@@ -338,6 +418,10 @@ parameter_list|()
 throws|throws
 name|ParseException
 block|{
+name|argWasQuoted
+operator|=
+literal|false
+expr_stmt|;
 name|sp
 operator|.
 name|eatws
@@ -403,6 +487,10 @@ name|sp
 operator|.
 name|getQuotedString
 argument_list|()
+expr_stmt|;
+name|argWasQuoted
+operator|=
+literal|true
 expr_stmt|;
 break|break;
 default|default:
@@ -855,17 +943,68 @@ operator|==
 literal|'-'
 condition|)
 block|{
+name|Number
+name|num
+init|=
+name|sp
+operator|.
+name|getNumber
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|num
+operator|instanceof
+name|Long
+condition|)
+block|{
+name|valueSource
+operator|=
+operator|new
+name|LongConstValueSource
+argument_list|(
+name|num
+operator|.
+name|longValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|num
+operator|instanceof
+name|Double
+condition|)
+block|{
+name|valueSource
+operator|=
+operator|new
+name|DoubleConstValueSource
+argument_list|(
+name|num
+operator|.
+name|doubleValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+comment|// shouldn't happen
 name|valueSource
 operator|=
 operator|new
 name|ConstValueSource
 argument_list|(
-name|sp
+name|num
 operator|.
-name|getFloat
+name|floatValue
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 elseif|else
 if|if
@@ -890,6 +1029,113 @@ name|getQuotedString
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|ch
+operator|==
+literal|'$'
+condition|)
+block|{
+name|sp
+operator|.
+name|pos
+operator|++
+expr_stmt|;
+name|String
+name|param
+init|=
+name|sp
+operator|.
+name|getId
+argument_list|()
+decl_stmt|;
+name|String
+name|val
+init|=
+name|getParam
+argument_list|(
+name|param
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|val
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|ParseException
+argument_list|(
+literal|"Missing param "
+operator|+
+name|param
+operator|+
+literal|" while parsing function '"
+operator|+
+name|sp
+operator|.
+name|val
+operator|+
+literal|"'"
+argument_list|)
+throw|;
+block|}
+name|QParser
+name|subParser
+init|=
+name|subQuery
+argument_list|(
+name|val
+argument_list|,
+literal|"func"
+argument_list|)
+decl_stmt|;
+name|Query
+name|subQuery
+init|=
+name|subParser
+operator|.
+name|getQuery
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|subQuery
+operator|instanceof
+name|FunctionQuery
+condition|)
+block|{
+name|valueSource
+operator|=
+operator|(
+operator|(
+name|FunctionQuery
+operator|)
+name|subQuery
+operator|)
+operator|.
+name|getValueSource
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+name|valueSource
+operator|=
+operator|new
+name|QueryValueSource
+argument_list|(
+name|subQuery
+argument_list|,
+literal|0.0f
+argument_list|)
+expr_stmt|;
+block|}
+comment|/***        // dereference *simple* argument (i.e., can't currently be a function)        // In the future we could support full function dereferencing via a stack of ValueSource (or StringParser) objects       ch = val.length()==0 ? '\0' : val.charAt(0);        if (ch>='0'&& ch<='9'  || ch=='.' || ch=='+' || ch=='-') {         QueryParsing.StrParser sp = new QueryParsing.StrParser(val);         Number num = sp.getNumber();         if (num instanceof Long) {           valueSource = new LongConstValueSource(num.longValue());         } else if (num instanceof Double) {           valueSource = new DoubleConstValueSource(num.doubleValue());         } else {           // shouldn't happen           valueSource = new ConstValueSource(num.floatValue());         }       } else if (ch == '"' || ch == '\'') {         QueryParsing.StrParser sp = new QueryParsing.StrParser(val);         val = sp.getQuotedString();         valueSource = new LiteralValueSource(val);       } else {         if (val.length()==0) {           valueSource = new LiteralValueSource(val);         } else {           String id = val;           SchemaField f = req.getSchema().getField(id);           valueSource = f.getType().getValueSource(f, this);         }       }        ***/
 block|}
 else|else
 block|{
