@@ -3869,6 +3869,127 @@ argument_list|)
 argument_list|)
 return|;
 block|}
+DECL|method|getNumber
+name|Number
+name|getNumber
+parameter_list|()
+throws|throws
+name|ParseException
+block|{
+name|eatws
+argument_list|()
+expr_stmt|;
+name|int
+name|start
+init|=
+name|pos
+decl_stmt|;
+name|boolean
+name|flt
+init|=
+literal|false
+decl_stmt|;
+while|while
+condition|(
+name|pos
+operator|<
+name|end
+condition|)
+block|{
+name|char
+name|ch
+init|=
+name|val
+operator|.
+name|charAt
+argument_list|(
+name|pos
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|(
+name|ch
+operator|>=
+literal|'0'
+operator|&&
+name|ch
+operator|<=
+literal|'9'
+operator|)
+operator|||
+name|ch
+operator|==
+literal|'+'
+operator|||
+name|ch
+operator|==
+literal|'-'
+condition|)
+block|{
+name|pos
+operator|++
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|ch
+operator|==
+literal|'.'
+operator|||
+name|ch
+operator|==
+literal|'e'
+operator|||
+name|ch
+operator|==
+literal|'E'
+condition|)
+block|{
+name|flt
+operator|=
+literal|true
+expr_stmt|;
+name|pos
+operator|++
+expr_stmt|;
+block|}
+else|else
+block|{
+break|break;
+block|}
+block|}
+name|String
+name|v
+init|=
+name|val
+operator|.
+name|substring
+argument_list|(
+name|start
+argument_list|,
+name|pos
+argument_list|)
+decl_stmt|;
+return|return
+name|flt
+condition|?
+name|Double
+operator|.
+name|parseDouble
+argument_list|(
+name|v
+argument_list|)
+else|:
+name|Long
+operator|.
+name|parseLong
+argument_list|(
+name|v
+argument_list|)
+return|;
+block|}
 DECL|method|getDouble
 name|double
 name|getDouble
