@@ -277,56 +277,6 @@ operator|instanceof
 name|LiteralValueSource
 argument_list|)
 expr_stmt|;
-name|parser
-operator|=
-operator|new
-name|FunctionQParser
-argument_list|(
-literal|"1.5"
-argument_list|,
-name|local
-argument_list|,
-name|params
-argument_list|,
-name|req
-argument_list|)
-expr_stmt|;
-name|query
-operator|=
-name|parser
-operator|.
-name|parse
-argument_list|()
-expr_stmt|;
-name|assertTrue
-argument_list|(
-literal|"query is not a FunctionQuery"
-argument_list|,
-name|query
-operator|instanceof
-name|FunctionQuery
-argument_list|)
-expr_stmt|;
-name|fq
-operator|=
-operator|(
-name|FunctionQuery
-operator|)
-name|query
-expr_stmt|;
-name|assertTrue
-argument_list|(
-literal|"ValueSource is not a LiteralValueSource"
-argument_list|,
-name|fq
-operator|.
-name|getValueSource
-argument_list|()
-operator|instanceof
-name|ConstValueSource
-argument_list|)
-expr_stmt|;
-comment|//TODO: Add more tests here to test the parser
 block|}
 block|}
 end_class
