@@ -2521,6 +2521,43 @@ argument_list|,
 literal|"//float[@name='score']>'1.0'"
 argument_list|)
 expr_stmt|;
+comment|// test full param dereferencing
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"fl"
+argument_list|,
+literal|"*,score"
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"{!func}add($v1,$v2)"
+argument_list|,
+literal|"v1"
+argument_list|,
+literal|"add($v3,$v4)"
+argument_list|,
+literal|"v2"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"v3"
+argument_list|,
+literal|"2"
+argument_list|,
+literal|"v4"
+argument_list|,
+literal|"5"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"id:1"
+argument_list|)
+argument_list|,
+literal|"//float[@name='score']='8.0'"
+argument_list|)
+expr_stmt|;
 name|purgeFieldCache
 argument_list|(
 name|FieldCache
