@@ -268,6 +268,10 @@ New Features
 * SOLR-792: Adding PivotFacetComponent for Hierarchical faceting
   (erik, Jeremy Hinegardner, Thibaut Lassalle, ryan)
 
+* SOLR-2128: Full parameter substitution for function queries.
+  Example: q=add($v1,$v2)&v1=mul(popularity,5)&v2=20.0
+  (yonik)
+
 Optimizations
 ----------------------
 
